# demosaic

./: .gitignore  LICENSE  README.md  scratch.ipynb
demosaic/: CMakeLists.txt
demosaic/app/: main_demosaic.cpp  main_loadraw.cpp  main_rawgen.cpp
demosaic/cmake/: FindLibRaw.cmake
demosaic/include/: bayer_pattern.hpp  demosaic_engine.hpp  image_io.hpp
demosaic/src/: bayer_pattern.cpp  demosaic_engine.cpp  image_io.cpp
